@@ -17,13 +17,16 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <argumentA>java.base/jdk.internal.misc=ALL-UNNAMED</argumentA>
+        <argumentB>java.logging/java.util.logging=ALL-UNNAMED</argumentB>
+        <argumentC>java.base/java.lang=ALL-UNNAMED</argumentC>
     </properties>
 
     <build>
         <resources>
             <resource>
-                <directory>src/resources</directory>
+                <directory>src/main/resources</directory>
             </resource>
         </resources>
         <plugins>
@@ -74,6 +77,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.2</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -87,15 +91,21 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
                 <configuration>
                     <mainClass>com.snowflake.s3compatapitestsuite.perf.PerfStatsApp</mainClass>
                     <arguments>
                         <argument>--add-exports</argument>
                         <argument>${argumentA}</argument>
+                        <argument>--add-opens</argument>
+                        <argument>${argumentB}</argument>
+                        <argument>--illegal-access</argument>
+                        <argument>warn</argument>
                     </arguments>
                 </configuration>
             </plugin>
         </plugins>
+
     </build>
 
     <dependencies>
@@ -157,7 +167,7 @@
         <dependency>
             <groupId>org.spf4j</groupId>
             <artifactId>spf4j-core</artifactId>
-            <version>8.9.5</version>
+            <version>8.9.4</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.avro</groupId>
@@ -173,7 +183,7 @@
         <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
-            <version>1.11.0</version>
+            <version>1.10.2</version>
         </dependency>
     </dependencies>
 
